- fixed the build of snd-pnp module. - added the default topdir definition back to each Makefile for convenience.   it's not usable for compilation of 2.6 kernels, though.

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -48,6 +48,7 @@ CONFIG_ISA		= @CONFIG_ISA@
 CONFIG_ISAPNP_KERNEL	= @CONFIG_ISAPNP_KERNEL@
 CONFIG_PNP_KERNEL	= @CONFIG_PNP_KERNEL@
 CONFIG_ISAPNP		= @CONFIG_ISAPNP@
+CONFIG_PNP		= @CONFIG_PNP@
 CONFIG_SGI		= @CONFIG_SGI@
 CONFIG_L3		= @CONFIG_L3@
 CONFIG_X86		= @CONFIG_X86@
