--- a/drivers/opl4/Makefile
+++ b/drivers/opl4/Makefile
@@ -1,6 +1,6 @@
-#
-# Makefile for ALSA
-#
+ifndef SND_TOPDIR
+SND_TOPDIR=../..
+endif
 
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
