--- a/drivers/vx/Makefile
+++ b/drivers/vx/Makefile
@@ -1,9 +1,9 @@
+ifndef SND_TOPDIR
+SND_TOPDIR=../..
+endif
+
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
-
-#
-#
-#
 
 export-objs := vx_core.o
 
