--- a/isa/msnd/Makefile
+++ b/isa/msnd/Makefile
@@ -1,14 +1,9 @@
-#
-# Makefile for ALSA
-# Copyright (c) 2001 by Jaroslav Kysela <perex@suse.cz>
-#
+ifndef SND_TOPDIR
+SND_TOPDIR=../..
+endif
 
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
-
-#
-#
-#
 
 snd-msnd-pinnacle-objs := msnd.o msnd_pinnacle.o msnd_pinnacle_mixer.o msnd_midi.o
 # snd-msnd-classic-objs := msnd.o msnd_classic.o msnd_midi.o
