--- a/pci/mixart/Makefile
+++ b/pci/mixart/Makefile
@@ -1,9 +1,9 @@
+ifndef SND_TOPDIR
+SND_TOPDIR=../..
+endif
+
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
-
-#
-#
-#
 
 snd-mixart-objs := mixart.o mixart_core.o mixart_hwdep.o mixart_mixer.o
 
