--- a/pci/pdplus/Makefile
+++ b/pci/pdplus/Makefile
@@ -1,18 +1,12 @@
-#
-# Makefile for ALSA
-# Copyright (c) 2001 by Jaroslav Kysela <perex@suse.cz>
-#
+ifndef SND_TOPDIR
+SND_TOPDIR=../..
+endif
 
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
 
-#
-#
-#
-
 snd-pdplus-objs := pdplus.o
 
-# Toplevel Module Dependency
 obj-$(CONFIG_SND_PDPLUS) += snd-pdplus.o
 
 include $(SND_TOPDIR)/Rules.make
