--- a/pci/vx222/Makefile
+++ b/pci/vx222/Makefile
@@ -1,9 +1,9 @@
+ifndef SND_TOPDIR
+SND_TOPDIR=../..
+endif
+
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
-
-#
-#
-#
 
 include $(SND_TOPDIR)/alsa-kernel/pci/vx222/Makefile
 
