--- a/include/config.h.in
+++ b/include/config.h.in
@@ -39,3 +39,7 @@
 #undef CONFIG_OLD_KILL_FASYNC
 #undef CONFIG_HAVE_DMA_ADDR_T
 #undef CONFIG_HAVE_MUTEX_MACROS
+
+/* 2.4/2.6 kernels */
+#undef CONFIG_HAVE_PCI_CONSISTENT_DMA_MASK
+
