- renamed us428 to usx2y driver.   the subdirectory is moved, too.   supports us122 device now.

--- a/usb/Makefile
+++ b/usb/Makefile
@@ -10,7 +10,7 @@ clean-files := usbaudio.c
 # for compatibility
 extra-snd-usb-audio-objs := usbcompat.o
 
-obj-$(CONFIG_SND) += us428/
+obj-$(CONFIG_SND) += usx2y/
 
 export-objs := usbaudio.o usbmidi.o
 
