--- a/usb/usx2y/Makefile
+++ b/usb/usx2y/Makefile
@@ -5,8 +5,8 @@ endif
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
 
-snd-usb-us428-objs := usbus428.o usbus428audio.o usX2Yhwdep.o
+snd-usb-usx2y-objs := usbusx2y.o usbusx2yaudio.o usX2Yhwdep.o
 
-obj-$(CONFIG_SND_USB_US428) += snd-usb-us428.o
+obj-$(CONFIG_SND_USB_USX2Y) += snd-usb-usx2y.o
 
 include $(SND_TOPDIR)/Rules.make
