--- a/include/config.h.in
+++ b/include/config.h.in
@@ -34,6 +34,7 @@
 #undef CONFIG_HAVE_SNPRINTF
 #undef CONFIG_HAVE_VMALLOC_TO_PAGE
 #undef CONFIG_HAVE_PDE
+#undef CONFIG_HAVE_TTY_COUNT_ATOMIC
 
 /* 2.2 kernels */
 #undef CONFIG_OLD_KILL_FASYNC
