--- a/pci/Kconfig
+++ b/pci/Kconfig
@@ -35,3 +35,10 @@ config SND_BT87X
 	help
 	  Say 'Y' or 'M' to include support for recording audio from TV cards
 	  based on Brooktree Bt878/Bt879 chips.
+
+config SND_INTEL8X0M
+	tristate "Intel i8x0/MX440; AMD768/8111 modems (EXPERIMENTAL)"
+	depends on SND && EXPERIMENTAL
+	help
+	  Say 'Y' or 'M' to include support for Intel8x0 and AMD768/8111 based
+	  modems.
