- fixed and clean upthe build without isapnp support.   empty *.isapnp will be made when isapnp is not supported.

--- a/include/config.h.in
+++ b/include/config.h.in
@@ -25,8 +25,8 @@
 #undef CONFIG_SND_KERNELDIR
 #undef CONFIG_ISAPNP_KERNEL
 #undef CONFIG_PNP_KERNEL
-#undef CONFIG_ISAPNP
-#undef CONFIG_PNP
+#undef CONFIG_SND_ISAPNP
+#undef CONFIG_SND_PNP
 
 /* 2.4 kernels */
 #undef CONFIG_HAVE_OLD_REQUEST_MODULE
