--- a/configure.in
+++ b/configure.in
@@ -955,11 +955,11 @@ fi
 
 AC_SUBST(CONFIG_ISAPNP)
 if test "$CONFIG_ISAPNP" = "y"; then
-  AC_DEFINE(CONFIG_ISAPNP)
+  AC_DEFINE(CONFIG_SND_ISAPNP)
   CONFIG_PNP=$CONFIG_ISAPNP
-  AC_DEFINE(CONFIG_PNP)
-  AC_SUBST(CONFIG_PNP)
+  AC_DEFINE(CONFIG_SND_PNP)
 fi
+AC_SUBST(CONFIG_PNP)
 
 dnl Check for strlcpy...
 AC_MSG_CHECKING(for strlcpy)
