--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -76,6 +76,7 @@ CONFIG_SND_RTCTIMER	= @CONFIG_SND_RTCTIMER@
 CONFIG_RTC		= @CONFIG_RTC@
 CONFIG_USB		= @CONFIG_USB@
 CONFIG_SND_BIT32_EMUL	= @CONFIG_SND_BIT32_EMUL@
+CONFIG_VIDEO_DEV	= @CONFIG_VIDEO_DEV@
 
 ifndef NEW_KBUILD
 INCLUDE		= -I$(TOPDIR)/include @EXTRA_INCLUDES@ -I$(CONFIG_SND_KERNELDIR)/include
