--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -79,7 +79,7 @@ CONFIG_SND_BIT32_EMUL	= @CONFIG_SND_BIT32_EMUL@
 CONFIG_VIDEO_DEV	= @CONFIG_VIDEO_DEV@
 
 ifndef NEW_KBUILD
-INCLUDE		= -I$(TOPDIR)/include @EXTRA_INCLUDES@ -I$(CONFIG_SND_KERNELDIR)/include
+INCLUDE		= -I$(TOPDIR)/include @EXTRA_INCLUDES@ @KERNEL_INC@
 CFLAGS		= $(MODFLAGS) $(INCLUDE) $(c_opts) -Wall -Wstrict-prototypes \
 	-fomit-frame-pointer -Wno-trigraphs -O2 -fno-strict-aliasing -fno-common \
 	-pipe -DALSA_BUILD -nostdinc -iwithprefix include
