--- a/kbuild/Makefile
+++ b/kbuild/Makefile
@@ -1,1 +1,8 @@
+ifndef SND_TOPDIR
+SND_TOPDIR=..
+endif
+
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
+
 obj-$(CONFIG_SND) += ../acore/ ../i2c/ ../drivers/ ../isa/ ../pci/ ../ppc/ ../arm/ ../synth/ ../usb/ ../sparc/ ../parisc/ ../pcmcia/
