--- a/i2c/other/Makefile
+++ b/i2c/other/Makefile
@@ -5,14 +5,19 @@ endif
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
 
-export-objs += ak4xxx-adda.o ak4117.o tea575x-tuner.o
+export-objs += ak4xxx-adda.o ak4117.o
 
 snd-ak4117-objs := ak4117.o
 
 # Toplevel Module Dependency
 obj-$(CONFIG_SND_PDAUDIOCF) += snd-ak4117.o
 # hack for tea575x support
+ifeq (y,$(CONFIG_VIDEO_DEV))
 obj-$(CONFIG_SND_FM801) += snd-tea575x-tuner.o
+ifeq (m,$(CONFIG_SND_FM801))
+export-objs += tea575x-tuner.o
+endif
+endif
 
 include $(SND_TOPDIR)/alsa-kernel/i2c/other/Makefile
 
