--- a/include/config.h.in
+++ b/include/config.h.in
@@ -36,6 +36,7 @@
 #undef CONFIG_HAVE_PDE
 #undef CONFIG_HAVE_TTY_COUNT_ATOMIC
 #undef CONFIG_HAVE_VIDEO_GET_DRVDATA
+#undef CONFIG_HAVE_DUMP_STACK
 
 /* 2.2 kernels */
 #undef CONFIG_OLD_KILL_FASYNC
