- moved mixart driver to alsa-kernel tree.

--- a/pci/mixart/Makefile
+++ b/pci/mixart/Makefile
@@ -5,8 +5,6 @@ endif
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
 
-snd-mixart-objs := mixart.o mixart_core.o mixart_hwdep.o mixart_mixer.o
-
-obj-$(CONFIG_SND_MIXART) += snd-mixart.o
+include $(SND_TOPDIR)/alsa-kernel/pci/mixart/Makefile
 
 include $(SND_TOPDIR)/Rules.make
