--- a/pci/ac97/Makefile
+++ b/pci/ac97/Makefile
@@ -8,6 +8,8 @@ include $(SND_TOPDIR)/Makefile.conf
 obj-$(CONFIG_SND_AU8810) += snd-ac97-codec.o
 obj-$(CONFIG_SND_AU8820) += snd-ac97-codec.o
 obj-$(CONFIG_SND_AU8830) += snd-ac97-codec.o
+obj-$(CONFIG_SND_ATIIXP) += snd-ac97-codec.o
+obj-$(CONFIG_SND_INTEL8X0M) += snd-ac97-codec.o
 
 export-objs  := ac97_codec.o ak4531_codec.o
 
